# lv_make

./: .gitmodules  CMakeLists.txt
hmi_app/: CMakeLists.txt  lv_cmake.cpp
lv_cmake/: CMakeLists.txt  lv_cmake.h  lv_conf.h
